--- a/PlantIdentifier.html
+++ b/PlantIdentifier.html
@@ -239,7 +239,7 @@
                 // Make API call to Gemini
                 // IMPORTANT: Replace with your actual API key if not using a proxy or environment where it's injected.
                 // For this environment, the API key might be handled by the platform.
-                const apiKey = "AIzaSyDRPlatBATlr6LvhoFTYqxyoVzcDEcM7pE"; // Leave empty if handled by the platform
+                const apiKey = ""; // Leave empty if handled by the platform
                 const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${apiKey}`;
 
                 const response = await fetch(apiUrl, {
